style(Receipt & Summary): fix align-items build error & no-wrap on total cost

--- a/src/app/styles/Receipt.css
+++ b/src/app/styles/Receipt.css
@@ -223,7 +223,6 @@
 
   .receipt-component-head {
     display: flex;
-    align-items: start;
     flex-direction: column;
   }
 
