--- a/src/app/styles/Summary.css
+++ b/src/app/styles/Summary.css
@@ -44,6 +44,7 @@
   left: 50%;
   transform: translate(-50%, -50%);
   text-align: center;
+  text-wrap: nowrap;
 }
 
 .food-group-legend {
